--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "server": "node src/index.js",
+    "start": "node src/index.js",
     "nodemon": "nodemon src/index.js"
   },
   "author": "",
