--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.9.0",
     "graphql-request": "^4.3.0",
     "multer": "^1.4.5-lts.1",
-    "ramda": "^0.30.1"
+    "ramda": "^0.30.1",
+    "uuid": "^10.0.0"
   }
 }
