--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "nodemon": "nodemon src/index.js"
+    "nodemon": "nodemon src/index.js",
+    "test": "mocha",
+    "eslint": "npx eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^5.1.1",
+    "cpq-palma-import": "file:",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "graphql-request": "^4.3.0",
     "multer": "^1.4.5-lts.1",
     "ramda": "^0.30.1",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.9.0",
+    "mocha": "^10.7.3"
   }
 }
