--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,22 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch Program with remote server",
             "skipFiles": [
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}\\src\\index.js",
             "env": { "GRAPHQL_SERVER_URL": "https://cpq-graphql-server.herokuapp.com/promo/" }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program with local server",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}\\src\\index.js",
+            "env": { "GRAPHQL_SERVER_URL": "http://localhost:4000/promo/" }
         }
     ]
 }
